# capbot-ros

./: .gitignore  README.md
src/robot_localization/: CMakeLists.txt  package.xml
src/test_bot/: CMakeLists.txt  package.xml
src/test_bot/config/: camera.yaml  ekf.yaml  markers_db_blank.yaml  nav2_params.yaml  test_map_blank.pgm  test_map_blank.yaml
src/test_bot/description/: gazebo_control.xacro  lidar.xacro  robot.urdf.xacro  robot_real.urdf.xacro
src/test_bot/launch/: robot.launch.py
src/test_bot/scripts/: aruco_localizer.py  csi_camera_node.py  esp32_bridge_node.py  gui_bridge_node.py
src/test_bot/src/: esp32_bridge_node.cpp
tools/: README.md  generate_markers.py  make_blank_map.py  test_aruco.py
